# check-git-status

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml  check-git-status.sh
scripts/: install-hooks.sh  pre-commit.hook
src/: cli.rs  core.rs  error.rs  main.rs  output.rs
tests/: integration_tests.rs
