[package]
name = "check-git-status"
version = "1.3.1"
edition = "2021"
description = "Recursively check git repository status with parallel processing"
repository = "https://github.com/kjanat/tools"
license = "MIT"
keywords = ["cli", "git", "parallel", "status"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "check-git-status"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
rayon = "1.10"
term_size = "0.3"
walkdir = "2.5"
