[package]
name = "check-git-status"
version = "1.3.1"
authors = ["Kaj Kowalski <info@kajkowalski.nl>"]
edition = "2024"
rust-version = "1.85"
description = "Recursively check git repository status with parallel processing"
repository = "https://github.com/kjanat/tools"
homepage = "https://github.com/kjanat/tools"
license = "MIT"
keywords = ["cli", "git", "parallel", "status"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "check-git-status"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
colored = "2.1"
dirs = "5.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
term_size = "0.3"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.14"
